# ReversiCpp

./: .gitignore  CMakeLists.txt  Readme.md  RemoteServer.cpp  RemoteServer.h  Runner.cpp  Runner.h  World.h  main.cpp
package/: IReversi.h  Reversi.cpp  Reversi.h
